<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#D20416"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/credit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:text="@string/info6"
        android:textColor="@color/radio_button_selected_color" />

  

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView1"
        android:layout_marginLeft="@dimen/info_margin"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/info2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/info3" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="23dp"
        android:text="@string/info4"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

     <TextView
         android:id="@+id/TextView_copyright"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageView_roundflat_logo"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/imageView_roundflat_logo"
         android:layout_marginTop="30dp"
         android:gravity="center|left"
         android:text="@string/copyright"
         android:textColor="@color/black" 
         android:textSize="9sp"/>

     <ImageView
         android:id="@+id/imageView_roundflat_logo"
         android:layout_width="140dp"
         android:layout_height="30dp"
         android:layout_alignLeft="@+id/TextView_weblink"
         android:layout_below="@+id/TextView_weblink"
         android:layout_marginTop="@dimen/margin_10"
         android:contentDescription="@string/app_name"
         android:src="@drawable/rf_logo" />

     <TextView
         android:id="@+id/TextView_weblink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:gravity="center|left"
         android:text="@string/info5"
          android:textSize="16sp"
         android:textColor="@color/actionbar_text_color" 
         android:textStyle="bold"/>

     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/linearLayout1"
         android:layout_marginTop="23dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/info_icon" />

</RelativeLayout>