<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_pressed"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
          android:layout_height="44dp"
        android:layout_margin="5dp" >
        
           <TextView
            android:id="@+id/textview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textColor="@color/actionbar_text_color" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textview_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/card_list"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/reset"
            android:textColor="@color/actionbar_text_color" 
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#979698"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- <ListView -->
        <!-- android:id="@+id/listView_tutorial_title" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" > -->
        <!-- </ListView> -->

        <se.emilsjolander.stickylistheaders.ExpandableStickyListHeadersListView
            android:id="@+id/listView_tutorial_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:drawSelectorOnTop="true"
            android:fastScrollEnabled="true"
            android:overScrollMode="never"
            android:padding="@dimen/list_padding"
            android:background="@color/white"
            android:scrollbarStyle="outsideOverlay" >
        </se.emilsjolander.stickylistheaders.ExpandableStickyListHeadersListView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Empty"
            android:textSize="30sp"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>